# result.c

./: .gitignore  LICENSE  README.md  maybe.h  meson.build  result.h
examples/: chaining.c  fail_fmt.c  map.c  map_optional.c  optional.c  optional_in_result.c  result.c
